# git-surgeon

./: .gitignore  .pylintrc  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci-cd.yml  test.yml
docs/: overview.md
git_nuke/: cli.py  config.py  core.py
git_nuke/operations/: __init__.py  file_purger.py  history_truncator.py  repo_cleanup.py
git_surgeon/: cli.py  config.py  core.py
git_surgeon/docs/: overview.md
git_surgeon/operations/: __init__.py  author_rewriter.py  file_purger.py  history_truncator.py  repo_cleanup.py
git_surgeon/utils/: git_filter.py
scripts/: lint.py
tests/: conftest.py  test_author_rewriter.py  test_cli.py  test_config.py  test_core.py  test_file_purger.py  test_history_truncator.py  test_repo_cleanup.py
